Improved social links, menubar text's transition, footer link and email id

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/16c0c49455c4da40b285d614e/1e0dcfec08d4833f57f74e75d.js");</script>
   </head>
   <body>
-    <section class="intro">
+    <section id="intro">
       <video class="homeVideo" poster="media/bg-2.jpg" id="bgvid" playsinline autoplay muted loop style="position:absolute;">
         <source src="media/try2.m4v" type="video/m4v">
         <source src="media/try2.mp4" type="video/mp4">        
@@ -51,13 +51,13 @@
               <a href="#blog">Blog</a>
             </div>
             <div class="col-sm-auto social">
-              <a href="https://www.facebook.com/trackyo/" class="socialIcons">
+              <a href="https://www.facebook.com/trackyo/" target="_blank" class="socialIcons">
                 <img src="media/social/facebook.png"/>
               </a>
-              <a href="http://www.twitter.com/trackyotpl" class="socialIcons">
+              <a href="http://www.twitter.com/trackyotpl" target="_blank" class="socialIcons">
                 <img src="media/social/twitter.png"/>
               </a>
-              <a href="https://www.linkedin.com/company/trackyotech-private-limited" class="socialIcons">
+              <a href="https://www.linkedin.com/company/trackyotech-private-limited" target="_blank" class="socialIcons">
                 <img src="media/social/linkedin.png"/>
               </a>
             </div>
@@ -848,7 +848,9 @@
         <div class="row">
           <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="footerSection logoFooter">
+            <a href="#intro">
               trac<span class="logoFooterLarge">kyo</span><span class="TM">&trade;</span>
+            </a>
             </div>
           </div>
           <div class="col-sm-12 col-md-6 col-lg-auto ml-md-auto">
@@ -895,10 +897,15 @@
             </div>
             <div class="col-sm-12 col-md-auto">
               <div class="footerElement">
-                <a href="termsOfUse.html">Terms Of Use</a>
+                <a href="termsOfUse.html">Terms of Use</a>
               </div>
             </div>
             <div class="col-sm-12 col-md-auto ml-md-auto">
+              <div class="footerElement">
+                <a href="mailto:info@trackyotech.com">info@trackyotech.com</a>
+              </div>
+            </div>
+            <div class="col-sm-12 col-md-auto">
               <div class="footerElement">
                 © 2017 | Trackyotech Private Limited
               </div>
