Optimized videos for faster load, Changed social icons,added fallback background colour

--- a/index.html
+++ b/index.html
@@ -21,11 +21,23 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,500,700" rel="stylesheet">
 
     <script src="https://use.fontawesome.com/e9de4e82e4.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-56286897-6"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-56286897-6');
+    </script>
+
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/16c0c49455c4da40b285d614e/1e0dcfec08d4833f57f74e75d.js");</script>
   </head>
   <body>
+      
     <section id="intro">
-      <video class="homeVideo" poster="media/bg-2.jpg" id="bgvid" playsinline autoplay muted loop style="position:absolute;">
+      <video class="homeVideo" id="bgvid" playsinline autoplay muted loop style="position:absolute;">
+        <source src="media/try2a.webm" type="video/webm">
         <source src="media/try2.m4v" type="video/m4v">
         <source src="media/try2.mp4" type="video/mp4">        
       </video >
@@ -106,14 +118,13 @@
             <div class="col-md-6 col-sm-12 order-md-1 order-sm-1" style="padding-left: 0px; padding-right: 0px;" >
               <div class="graphics">
                 <!--<img id="featuresImage" src="media/iPad2.png" >-->
-                <div class="videoContainer">
-                  <video class="video" poster="" preload="auto">
-                    <source src="media/product1.m4v" type="video/m4v">
-                    <source src="media/product1.mkv" type="video/mkv">
-                    <source src="media/product1.mp4" type="video/mp4">
-                    Sorry, your browser doesn't support embedded videos, but don't worry, you can <a href="videofile.webm">download it</a> and watch it with your favorite video player!
-                  </video>
-                </div>
+                <video class="video" poster="" preload="auto">
+                  <source src="media/product1.webm" type="video/webm">
+                  <source src="media/product1.m4v" type="video/m4v">
+                  <source src="media/product1.mkv" type="video/mkv">
+                  <source src="media/product1.mp4" type="video/mp4">
+                  Sorry, your browser doesn't support embedded videos, but don't worry, you can <a href="videofile.webm">download it</a> and watch it with your favorite video player!
+                </video>
               </div>
             </div>
             <div class="col-md-6 col-sm-12 order-md-2 order-sm-2" style="padding-left: 0px; padding-right: 0px;" >
@@ -136,10 +147,11 @@
             </div>
             <div class="col-md-6 col-sm-12 order-md-2 order-sm-1" style="padding-left: 0px; padding-right: 0px;" >
               <div class="graphics">
-                <video class="video" src="media/product2.mp4"  poster="">
-                Sorry, your browser doesn't support embedded videos, 
-                but don't worry, you can <a href="videofile.webm">download it</a>
-                and watch it with your favorite video player!
+                <video class="video" poster="" preload="auto">
+                  <source src="media/product2.webm" type="video/webm">
+                  <source src="media/product2.m4v" type="video/m4v">
+                  <source src="media/product2.mp4" type="video/mp4">
+                  Sorry, your browser doesn't support embedded videos, but don't worry, you can <a href="videofile.webm">download it</a> and watch it with your favorite video player!
                 </video>
               </div>
             </div>
@@ -151,10 +163,11 @@
           <div class="row">
             <div class="col-md-6 col-sm-12 order-lg-1 order-sm-1" style="padding-left: 0px; padding-right: 0px;" >
               <div class="graphics">
-                <video class="video" src="media/product3.mp4"  poster="">
-                Sorry, your browser doesn't support embedded videos, 
-                but don't worry, you can <a href="videofile.webm">download it</a>
-                and watch it with your favorite video player!
+                <video class="video" poster="" preload="auto">
+                  <source src="media/product3.webm" type="video/webm">
+                  <source src="media/product3.m4v" type="video/m4v">
+                  <source src="media/product3.mp4" type="video/mp4">
+                  Sorry, your browser doesn't support embedded videos, but don't worry, you can <a href="videofile.webm">download it</a> and watch it with your favorite video player!
                 </video>
               </div>
             </div>
@@ -178,11 +191,11 @@
             </div>
             <div class="col-md-6 col-sm-12 order-lg-2 order-sm-1" style="padding-left: 0px; padding-right: 0px;" >
               <div class="graphics">
-                <!--<img id="featuresImage" src="media/iPhone2.png" >-->
-                <video class="video" src="media/product4.mp4"  poster="" >
-                Sorry, your browser doesn't support embedded videos, 
-                but don't worry, you can <a href="videofile.webm">download it</a>
-                and watch it with your favorite video player!
+                <video class="video" poster="" preload="auto">
+                  <source src="media/product4.webm" type="video/webm">
+                  <source src="media/product4.m4v" type="video/m4v">
+                  <source src="media/product4.mp4" type="video/mp4">
+                  Sorry, your browser doesn't support embedded videos, but don't worry, you can <a href="videofile.webm">download it</a> and watch it with your favorite video player!
                 </video>
               </div>
             </div>
@@ -483,7 +496,7 @@
               </div>
               <div class="memberSocial">
                   <a href="https://www.linkedin.com/in/yash-agarwal-18864360/" class="socialIcons">
-                    <img id="linkedin" src="media/social/linkedin2.png" onmouseover="hover(this);" onmouseout="unhover(this);" width="20px" />
+                    <img id="linkedin" src="media/social/linkedin3.png" onmouseover="hover(this);" onmouseout="unhover(this);" width="20px" />
                   </a>
               </div>
               <div class="memberHide">
@@ -506,7 +519,7 @@
               </div>
               <div class="memberSocial">
                   <a href="https://www.linkedin.com/in/kritika-jain-78975560/" class="socialIcons">
-                    <img id="linkedin" src="media/social/linkedin2.png" onmouseover="hover(this);" onmouseout="unhover(this);" width="20px" />
+                    <img id="linkedin" src="media/social/linkedin3.png" onmouseover="hover(this);" onmouseout="unhover(this);" width="20px" />
                   </a>
               </div>
             </div>
@@ -524,10 +537,10 @@
             </div>
               <div class="memberSocial">
                   <a href="https://linkedin.com/in/orkunkarabasoglu" class="socialIcons">
-                    <img id="linkedin" src="media/social/linkedin2.png" onmouseover="hover(this);" onmouseout="unhover(this);" width="20px" />
+                    <img id="linkedin" src="media/social/linkedin3.png" onmouseover="hover(this);" onmouseout="unhover(this);" width="20px" />
                   </a>
                   <a href="http://www.karabasoglu.com/" class="socialIcons">
-                    <img src="media/social/web2.png"/>
+                    <img src="media/social/web3.png"/>
                   </a>
               </div>
             </div>
@@ -556,10 +569,10 @@
             </div>
               <div class="memberSocial">
                   <a href="https://www.linkedin.com/in/prahladmenon/" class="socialIcons">
-                    <img src="media/social/linkedin2.png" width="20px" />
+                    <img src="media/social/linkedin3.png" width="20px" />
                   </a>
                   <a href="http://www.justcallharry.com/" class="socialIcons">
-                    <img src="media/social/web2.png"/>
+                    <img src="media/social/web3.png"/>
                   </a>
               </div>
               <div class="memberHide">
@@ -582,10 +595,10 @@
             </div>
               <div class="memberSocial">
                   <a href="https://www.linkedin.com/in/ravisekhar/" class="socialIcons">
-                    <img src="media/social/linkedin2.png" width="20px" />
+                    <img src="media/social/linkedin3.png" width="20px" />
                   </a>
                   <a href="http://www.cocreationconsulting.com/" class="socialIcons">
-                    <img src="media/social/web2.png"/>
+                    <img src="media/social/web3.png"/>
                   </a>
               </div>
             </div>
@@ -607,10 +620,10 @@
             </div>
               <div class="memberSocial">
                   <a href="https://www.linkedin.com/in/sridharlanka/" class="socialIcons">
-                    <img src="media/social/linkedin2.png" width="20px" />
+                    <img src="media/social/linkedin3.png" width="20px" />
                   </a>
                   <a href="http://www.cocreationconsulting.com/" class="socialIcons">
-                    <img src="media/social/web2.png"/>
+                    <img src="media/social/web3.png"/>
                   </a>
               </div>
             </div>
@@ -628,10 +641,10 @@
             </div>
               <div class="memberSocial">
                   <a href="https://www.linkedin.com/in/dr-prakash-sharma-330743a3/" class="socialIcons">
-                    <img src="media/social/linkedin2.png" width="20px" />
+                    <img src="media/social/linkedin3.png" width="20px" />
                   </a>
                   <a href="https://www.autonebula.com/" class="socialIcons">
-                    <img src="media/social/web2.png"/>
+                    <img src="media/social/web3.png"/>
                   </a>
               </div>
             </div>
@@ -902,7 +915,7 @@
             </div>
             <div class="col-sm-12 col-md-auto ml-md-auto">
               <div class="footerElement">
-                <a href="mailto:info@trackyotech.com">info@trackyotech.com</a>
+                <a href="mailto:info@trackyotech">info@trackyotech.com</a>
               </div>
             </div>
             <div class="col-sm-12 col-md-auto">
@@ -921,6 +934,7 @@
     <script src="js/jquery.viewportchecker.min.js"></script>
     <script src="js/video.js"></script>
     <script>
+      
       const header = document.querySelector('#header');
       const heading = document.querySelector('#heading');
       let topOfNav = header.offsetHeight;
@@ -969,12 +983,12 @@
       function hideVideo(e) {
       $('video', this).get(0).pause(); 
       }
-      function hover(element) {
+      /*function hover(element) {
         element.setAttribute('src', 'media/social/linkedin.png');
       }
       function unhover(element) {
         element.setAttribute('src', 'media/social/linkedin2.png');
-      }
+      }*/
       //document.getElementById("featuresImage").style.height = graphicsHeight;
       //document.getElementById("featuresImage").style.width = graphicsWidth;
     </script>
