Client new demands :P

--- a/index.html
+++ b/index.html
@@ -45,12 +45,14 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-sm-auto logo">
+              <a href="#intro">
               trac<span class="logoLarge">kyo</span><span class="TM">&trade;</span>
+              </a>
             </div>
             <div class="col-sm-auto ml-md-auto menuItem">
                 <a href="#">Home</a>
             </div>
-            <div class="col-sm-auto menuItem">
+            <div class="col-sm-auto menuItem active">
               <a href="#features">Product</a>
             </div>
             <div class="col-sm-auto menuItem">
@@ -353,7 +355,7 @@
         </div>
         <div class="row">
           <div class="col-sm-12 col-md-4">
-            <div class="c100 p8 big center">
+            <div class="c100 p8 med center">
               <span>8%</span>
               <div class="slice">
                 <div class="bar"></div>
@@ -363,7 +365,7 @@
             <div class="alternatives">Road Safety Mirrors</div>
           </div>
           <div class="col-sm-12 col-md-4">
-            <div class="c100 p8 big center">
+            <div class="c100 p8 med center">
               <span>8%</span>
               <div class="slice">
                 <div class="bar"></div>
@@ -373,7 +375,7 @@
             <div class="alternatives">CCTV Surveillance</div>
           </div>
           <div class="col-sm-12 col-md-4">
-            <div class="c100 p12 big center">
+            <div class="c100 p12 med center">
               <span>12%</span>
               <div class="slice">
                 <div class="bar"></div>
@@ -385,7 +387,7 @@
         </div>
         <div class="row">
           <div class="col-sm-12 col-md-4 ml-md-auto">
-            <div class="c100 p20 big center">
+            <div class="c100 p20 med center">
               <span>20%</span>
               <div class="slice">
                 <div class="bar"></div>
@@ -395,7 +397,7 @@
             <div class="alternatives">Speed Breakers</div>
           </div>
           <div class="col-sm-12 col-md-4 mr-md-auto">
-            <div class="c100 green p65 big center">
+            <div class="c100 green p65 med center">
               <span>65%</span>
               <div class="slice">
                 <div class="bar"></div>
@@ -762,10 +764,10 @@
           <div class="col-sm-12 col-md-9">
             <div class="article">
               <div class="title">
-                T-Hub startup building vehicle tracking device
+                Trackyo, building easy-to-use products targeting to lead a better life
               </div>
               <div class="articleContent">
-                At a time and age when safety and security of transportation is gaining prominence in India, T-Hub incubated startup Trackyo is building a solution that will help in vehicle monitoring and tracking. The Hyderabad-based early stage startup is designing security solutions for vehicle monitoring and driver assistance systems specifically for gated societies including residential, shopping malls and business centres. These societies are prone to over-speeding and reckless driving with some reports revealing that over 4.5 lakh deaths and 1.25 crore serious injuries have occurred, globally.
+                Inspired by a problem that the founders Yash Agarwal and Kritika Jain faced while they were studying their Bachelor’s at the NIIT university, they started working on a reliable and technology driven solution to cater to the problem of over speeding, reckless driving, parking assistance, unavailability of prompt facilitation of emergency services along with a few faculty members in September 2014.
               </div>
               <div class="icons">
                 <a target="_blank" href="http://startuphyderabad.com/hyderabad-based-start-trackyo-building-easy-use-products-targeting-lead-better-life/">
@@ -788,10 +790,10 @@
             <div class="col-sm-12 col-md-9">
               <div class="article">
                 <div class="title">
-                  Trackyo, building easy-to-use products targeting to lead a better life
+                  T-Hub startup building vehicle tracking device
                 </div>
                 <div class="articleContent">
-                  Inspired by a problem that the founders Yash Agarwal and Kritika Jain faced while they were studying their Bachelor’s at the NIIT university, they started working on a reliable and technology driven solution to cater to the problem of over speeding, reckless driving, parking assistance, unavailability of prompt facilitation of emergency services along with a few faculty members in September 2014.
+                  At a time and age when safety and security of transportation is gaining prominence in India, T-Hub incubated startup Trackyo is building a solution that will help in vehicle monitoring and tracking. The Hyderabad-based early stage startup is designing security solutions for vehicle monitoring and driver assistance systems specifically for gated societies including residential, shopping malls and business centres. These societies are prone to over-speeding and reckless driving with some reports revealing that over 4.5 lakh deaths and 1.25 crore serious injuries have occurred, globally.
                 </div>
                 <div class="icons">
                   <a target="_blank" href="https://telanganatoday.com/t-hub-startup-building-vehicle-tracking-device">
