Added Yasar University as partner

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="row justify-content-center">
           <div class="col-auto">
             <div class="howItWorks">
-              How It Works
+              How it works
             </div>
           </div>
         </div>
@@ -696,11 +696,11 @@
               <img id="nebula" src="media/partners/AutoNebula.png" style="top:14px;">              
             </div>
           </div>
-          <!--<div class="col-sm-12 col-md-4 col-lg-auto">
+          <div class="col-sm-12 col-md-4 col-lg-auto">
             <div class="partnerElement">
-              <img src="media/partners/NIIT.png" style="top:30px;">              
+              <img src="media/partners/yasar.png" >              
             </div>
-          </div>-->
+          </div>
         </div>
       </div>
     </section>
