--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <body>
       
     <section id="intro">
-      <video class="homeVideo" id="bgvid" playsinline autoplay muted loop style="position:absolute;">
+      <video class="homeVideo" id="bgvid" playsinline autoplay muted loop>
         <source src="media/try2a.webm" type="video/webm">
         <source src="media/try2.m4v" type="video/m4v">
         <source src="media/try2.mp4" type="video/mp4">        
