--- a/index.html
+++ b/index.html
@@ -987,6 +987,52 @@
         }
       }
       window.addEventListener('scroll', fixNav);
+      window.addEventListener('scroll', changeNav);
+
+      var removeAllActives = function(){
+          jQuery('.menuItem').each(function () {
+              jQuery(this).removeClass('active');
+          });
+      };
+      var sections = [];
+      function changeNav(){
+          if(sections.length===0){
+              //initiate sections
+              jQuery('.menuItem').each(function () {
+                  var currLink = jQuery(this);
+                  var targetId = currLink.find('a').attr("href");
+                  var refElement;
+                  if(targetId==="#"){
+                      refElement = jQuery('#intro');
+                  }else{
+                      refElement = jQuery(targetId);
+                  }
+                  sections.push({target:targetId, top:refElement.position().top-10, menuitem:currLink});
+              });
+              sections.sort(function (a,b) {
+                 return a.top-b.top;
+              });
+          }
+          var scrollPos = jQuery(document).scrollTop();
+          var i;
+          for(i=0;i<sections.length;i++){
+              if(scrollPos<sections[i].top){
+                  console.log(sections[i]);
+                  removeAllActives();
+                  if(i>0){
+                      sections[i-1].menuitem.toggleClass('active');
+                  }else{
+                      sections[0].menuitem.toggleClass('active');
+                  }
+                  break;
+              }
+          }
+          //check bottom
+          if ((window.innerHeight + window.pageYOffset) >= document.body.offsetHeight) {
+              removeAllActives();
+              sections[sections.length-1].menuitem.toggleClass('active');
+          }
+      }
       
       jQuery(document).ready(function() {
         jQuery('#heading').addClass("hidden").viewportChecker({
@@ -1001,28 +1047,6 @@
           classToAdd: 'visible animated fadeInLeft',
           offset: 100
           });
-        
-        //setting active class
-        var removeAllActives = function(){
-            //remove ative class from other menu items
-            jQuery(".menuItem").each(function() {
-                jQuery(this).removeClass('active');
-            });
-        };
-        removeAllActives();
-        var urlparts = jQuery(location).attr('href').split('#');
-        if(urlparts.length===1 || urlparts[1]===""){
-            jQuery('#menu-home').toggleClass('active');
-        }else{
-            jQuery('#menu-'+urlparts[urlparts.length-1]).toggleClass('active');
-        }
-        //click handler for active class change
-        jQuery('.menuItem').click(function(){
-            removeAllActives();
-            //add active class for clicked menu item
-            jQuery(this).toggleClass('active');
-          });
-
       });
 
       var graphicsHeight = $(".graphics").height();
