--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <body>
       
     <section id="intro">
-      <video class="homeVideo" id="bgvid" playsinline autoplay muted loop>
+      <video class="homeVideo" id="bgvid" playsinline autoplay muted loop style="position:absolute;">
         <source src="media/try2a.webm" type="video/webm">
         <source src="media/try2.m4v" type="video/m4v">
         <source src="media/try2.mp4" type="video/mp4">        
@@ -976,6 +976,21 @@
       let topOfNav = header.offsetHeight;
       console.log(topOfNav);
       //let heading = document.getElementById("#heading");
+
+      function parallax() {
+          let introHeight = jQuery('#intro').height();
+          let videoElement = jQuery('#bgvid');
+
+          console.log(window.scrollY);
+
+          if(window.scrollY >= introHeight * 0.136) {
+              videoElement.css("position", "absolute");
+          }
+          else {
+              videoElement.css("position", "");
+          }
+      }
+
       function fixNav() {
         if(window.scrollY >= 10) {
           document.body.classList.add('fixed-nav');
@@ -985,6 +1000,8 @@
           document.body.classList.remove('fixed-nav');
           heading.style.paddingTop = 160+0 + 'px';
         }
+
+        parallax();
       }
       window.addEventListener('scroll', fixNav);
       
