Text edits, colour changes

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="col-md-6 col-sm-12 order-md-2 order-sm-2" style="padding-left: 0px; padding-right: 0px;" >
               <div class="text t1">
                 <div class="featuresHeading">Vehicle arrives at gate</div>
-                <div class="featuresText">Security guard scans the vehicle number plate and hands over a uniquely mapped Trackyo unit to the vehicle drive</div>
+                <div class="featuresText">Security guard scans the vehicle number plate and hands over a uniquely mapped Trackyo unit to the vehicle driver</div>
               </div>
             </div>
           </div>
@@ -154,7 +154,7 @@
             <div class="col-md-6 col-sm-12 order-md-1 order-sm-2" style="padding-left: 0px; padding-right: 0px;" >
               <div class="text t2">
                 <div class="featuresHeading">Vehicle is tracked</div>
-                <div class="featuresText">Real-time speed and location tracking of the vehicle is done through the Trackyo unit. Driver gets feedback and real-time alerts during violations and critical situations</div>
+                <div class="featuresText">Real-time speed and location tracking of the vehicle is done through the Trackyo unit. Driver gets feedback and real-time audio visual alerts during violations and critical situations</div>
               </div>
             </div>
             <div class="col-md-6 col-sm-12 order-md-2 order-sm-1" style="padding-left: 0px; padding-right: 0px;" >
@@ -224,7 +224,7 @@
                 Innovation
               </div>
               <div class="innovationAbout">
-                The Trackyo solution employs a novel framework of turning a particular area to a connected vehicle area for implementing safety applications. The solution has a potential to reduce the possibility of human errors by 90% and reduce the costs by 25% in 3 months from implementation.
+                The Trackyo solution employs a novel framework of turning a particular area to a connected vehicle area for implementing safety applications. Trackyo has a potential to reduce the possibility of human errors by 90% and reduce the costs by 25% in 3 months from implementation.
               </div>
               <div class="innovationReasons">
                 Here are a few value additions from Trackyo that make it a revolutionary solution for bringing smart safety to geo-fenced areas
@@ -503,7 +503,7 @@
                 </div>
                 <div class="memberText">
                   <div class="memberName">Yash Agarwal</div>
-                  <div class="memberTitle">Chief Executive Officer</div>
+                  <div class="memberTitle">Founder & CEO</div>
                 </div>
               </div>
               <div class="memberSocial">
@@ -526,7 +526,7 @@
                 </div>
                 <div class="memberText">
                   <div class="memberName">Kritika Jain</div>
-                  <div class="memberTitle">Chief Technical Officer</div>
+                  <div class="memberTitle">Co-Founder & CTO</div>
                 </div>
               </div>
               <div class="memberSocial">
@@ -544,7 +544,7 @@
               </div>
               <div class="memberText">
                 <div class="memberName">Dr. Orkun Karabasoglu</div>
-                <div class="memberTitle">Advisor</div>
+                <div class="memberTitle">Co-Founder and Advisor</div>
               </div>
             </div>
               <div class="memberSocial">
@@ -575,7 +575,7 @@
                 <img src="media/team/Prahlad.jpg">
               </div>
               <div class="memberText">
-                <div class="advisoryName">Dr. Prahalad G. Menon</div>
+                <div class="advisoryName">Dr. Prahlad G. Menon</div>
                 <div class="memberTitle"></div>
               </div>
             </div>
