--- a/index.html
+++ b/index.html
@@ -945,6 +945,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
     <script src="js/jquery.viewportchecker.min.js"></script>
     <script src="js/video.js"></script>
+    <script src="js/jquery-visible.js"></script>
     <script>
       /*var sections = $('section')
         , nav = $('nav')
@@ -1057,13 +1058,22 @@
       for (var i = 0; i < elements.length; i++) {
         elements[i].style.width=(graphicsWidth+"px");
       }
-      var figure = $(".graphics").hover( hoverVideo, hideVideo );
+      $(window).scroll(function() {
+      $('video').each(function(){
+          if ($(this).visible()) {
+              $(this)[0].play();
+          } else {
+              $(this)[0].pause();
+          }
+      })
+      });
+      /*var figure = $(".graphics").hover( hoverVideo, hideVideo );
       function hoverVideo(e) {  
       $('video', this).get(0).play(); 
       }
       function hideVideo(e) {
       $('video', this).get(0).pause(); 
-      }
+      }*/
       /*function hover(element) {
         element.setAttribute('src', 'media/social/linkedin.png');
       }
