Added image in fb share

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <meta property="og:title" content="Trackyo">
     <meta property="og:description" content="Trackyo employs connected vehicle technology for smart traffic/ asset management at geo-fenced regions.">
-    <meta property="og:image" content="media/trackyoLogo.png">
+    <meta property="og:image" content="media/Trackyo-og.png">
     <meta property="og:url" content="https://www.trackyotech.com/">
 
     <meta name="twitter:title" content="Plinth'17">
