Maybe final changes

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <title>Trackyo | Smart traffic management for Geo-fenced areas</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="robots" content="noindex, follow">
+    <meta name="robots" content="index, follow">
 
     <meta name="author" content="Vishal Sanghai">
     <meta name="description" content="Trackyo employs connected vehicle technology for smart traffic/ asset management at geo-fenced regions (gated communities such as residential townships, airports, business centres etc.).">
-    <meta name="keywords" content="Trackyo, Trackyotech, Yash Agarwal">
+    <meta name="keywords" content="Trackyo, Trackyotech, Yash Agarwal,Automotive IOT solutions, Smart asset management, Smart fleet management, Automotive tech startups, Connected technology startups, Connected car startups, Smart city startup, Smart traffic management, security and surveillance at gated communities, home security, real-time vehicle tracking, real-time emergency service facilitation, connected vehicle startups, V2V communication, driver behaviour analysis, driver behaviour solutions, road safety, real-time parking assistance, intelligent transportation, traffic monitoring in Geo-fenced areas">
 
     <meta property="og:title" content="Trackyo">
     <meta property="og:description" content="Trackyo employs connected vehicle technology for smart traffic/ asset management at geo-fenced regions.">
@@ -186,7 +186,7 @@
             <div class="col-md-6 col-sm-12 order-md-1 order-sm-1" style="padding-left: 0px; padding-right: 0px;" >
               <div class="graphics">
                 <!--<img id="featuresImage" src="media/iPad2.png" >-->
-                <video class="video" poster="" preload="auto">
+                <video class="video" poster="" preload="auto" autoplay>
                   <source src="media/product1.webm" type="video/webm">
                   <source src="media/product1.m4v" type="video/m4v">
                   <source src="media/product1.mkv" type="video/mkv">
@@ -881,7 +881,7 @@
       <div class="container-fluid">
         <div class="row justify-content-center">
           <div class="col-auto">
-            <div class="sectionTitle">
+            <div class="sectionTitle" style="padding-bottom: 0px;">
               Our Blog
             </div>
           </div>
