--- a/index.html
+++ b/index.html
@@ -411,6 +411,35 @@
         </div>
       </div>
     </section>
+    <section id="videos">
+      <div class="container-fluid">
+        <div class="row justify-content-center">
+          <div class="col-sm-auto">
+            <div class="videosSectionTitle">
+              Got a minute? Check these videos on how Trackyo works:
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-sm-12 col-md-4">
+            <div class="videosElement">              
+              <img src="media/videos/p1b.png" class="pop" data-type="youtube" data-id="qT-Gfpms9zs" data-autoplay='true'>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <div class="videosElement">              
+              <img src="media/videos/p2b.png" class="pop" data-type="youtube" data-id="hah1ET9hQoE" data-autoplay='true'>
+            </div>
+          </div>
+          
+          <div class="col-sm-12 col-md-4">
+            <div class="videosElement">
+              <img src="media/videos/p4.png" class="pop" data-type="youtube" data-id="-LYiv6nKs7A" data-autoplay='true'>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <section id="alternative">
       <div class="container-fluid">
         <div class="row justify-content-center">
